sedang garap request lelang

--- a/app/src/main/res/layout/lelangitem_layout.xml
+++ b/app/src/main/res/layout/lelangitem_layout.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="150dp"
-    android:layout_pa="5dp">
+    android:padding="5dp">
     
     <LinearLayout
         android:padding="20dp"
@@ -25,7 +25,7 @@
             android:id="@+id/btndftarform"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="daftar"
+            android:text="detail"
             android:layout_gravity="end"/>
     </LinearLayout>
 
