--- a/app/src/main/res/layout/activity_detail_reqlel.xml
+++ b/app/src/main/res/layout/activity_detail_reqlel.xml
@@ -6,26 +6,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="20dp"
-    tools:context=".activity.DetailLelangActivity">
+    tools:context=".activity.DetailReqlelActivity">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Comment"/>
+        android:text="Lelang"/>
 
     <TextView
-        android:id="@+id/txt_leldetcomment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Hewan"/>
-
-    <TextView
-        android:id="@+id/txt_leldethewan"
+        android:id="@+id/txt_reqlelid"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"/>
@@ -36,7 +25,7 @@
         android:text="Pelelang"/>
 
     <TextView
-        android:id="@+id/txt_leldetnama"
+        android:id="@+id/txt_reqleluser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"/>
@@ -44,53 +33,56 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Harga"/>
+        android:text="Pendaftar"/>
 
     <TextView
-        android:id="@+id/txt_leldetharga"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <Button
-        android:id="@+id/btn_daftarlel"
+        android:id="@+id/txt_reqlelpengirim"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Daftar"
+        android:layout_marginBottom="15dp"/>
+
+    <Button
+        android:id="@+id/btn_reqlelaccept"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Terima"
         android:layout_marginTop="50dp" />
+
+    <Button
+        android:id="@+id/btn_reqlelreject"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Tolak"
+        android:textColor="#ffffff"
+        android:backgroundTint="@color/red"
+        android:layout_marginTop="10dp" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <TextView
-            android:id="@+id/tmp_idlelang"
+            android:id="@+id/tmp_reqlelid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="sd"
             android:visibility="invisible"/>
 
         <TextView
-            android:id="@+id/tmp_idhewan"
+            android:id="@+id/tmp_reqlel_iduser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@id/tmp_idlelang"
+            android:layout_toRightOf="@id/tmp_reqlelid"
             android:hint="ad"/>
 
         <TextView
-            android:id="@+id/tmp_idpelelang"
+            android:id="@+id/tmp_reqlel_idpendaftar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@id/tmp_idhewan"
+            android:layout_toRightOf="@id/tmp_reqlel_iduser"
             android:hint="as"/>
 
-        <TextView
-            android:id="@+id/tmp_iduser"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@id/tmp_idpelelang"
-            android:hint="as"/>
     </RelativeLayout>
 
 </LinearLayout>
