--- a/app/src/main/res/layout/activity_detail_reqlel.xml
+++ b/app/src/main/res/layout/activity_detail_reqlel.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Lelang"/>
+        android:text="Comment"/>
 
     <TextView
         android:id="@+id/txt_reqlelid"
@@ -64,8 +64,7 @@
             android:id="@+id/tmp_reqlelid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="sd"
-            android:visibility="invisible"/>
+            android:hint="sd"/>
 
         <TextView
             android:id="@+id/tmp_reqlel_iduser"
@@ -82,6 +81,14 @@
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@id/tmp_reqlel_iduser"
             android:hint="as"/>
+
+        <TextView
+            android:id="@+id/tmp_reqlel_idlelang"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/tmp_reqlel_idpendaftar"
+            android:hint="ds"/>
 
     </RelativeLayout>
 
