--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -77,6 +77,12 @@
                 android:layout_height="wrap_content"
                 android:text="Requset Lelang"/>
 
+            <Button
+                android:id="@+id/btn_togroupcht"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Group Chat"/>
+
         </LinearLayout>
     </ScrollView>
 
