--- a/app/src/main/res/layout/activity_detail_lelang.xml
+++ b/app/src/main/res/layout/activity_detail_lelang.xml
@@ -3,94 +3,155 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/brownlight"
     android:orientation="vertical"
-    android:padding="20dp"
     tools:context=".activity.DetailLelangActivity">
 
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Comment"/>
+        android:paddingTop="50dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_width="90dp"
+                android:layout_height="110dp"
+                android:background="@drawable/iconsapi"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="110dp"/>
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="120dp"
+                android:background="@drawable/iconayam"/>
+            <TextView
+                android:id="@+id/txtdet4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Harga Mulai"
+                android:textSize="20dp"
+                android:textColor="#000000"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="5dp" />
+            <TextView
+                android:id="@+id/txt_leldetharga"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:textStyle="bold"
+                android:textSize="40dp"
+                android:layout_marginLeft="10dp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/txtdet4"/>
 
-    <TextView
-        android:id="@+id/txt_leldetcomment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="230dp"
+                android:padding="15dp"
+                android:background="@drawable/detaillelasset_a">
+                <TextView
+                    android:id="@+id/txtdet1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Tentang Hewan"
+                    android:textColor="#000000"
+                    android:layout_marginBottom="5dp"/>
+                <TextView
+                    android:id="@+id/txt_leldetcomment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000000"
+                    android:textStyle="bold"
+                    android:layout_below="@id/txtdet1"
+                    android:layout_marginBottom="15dp"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Hewan"/>
+                <TextView
+                    android:id="@+id/txtdet2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Hewan"
+                    android:textColor="#000000"
+                    android:layout_marginBottom="5dp"
+                    android:layout_below="@id/txt_leldetcomment"/>
+                <TextView
+                    android:id="@+id/txt_leldethewan"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="15dp"
+                    android:textColor="#000000"
+                    android:textStyle="bold"
+                    android:textSize="20dp"
+                    android:layout_below="@id/txtdet2"/>
 
-    <TextView
-        android:id="@+id/txt_leldethewan"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"/>
+                <TextView
+                    android:id="@+id/txtdet3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Pelelang"
+                    android:textColor="#000000"
+                    android:layout_marginBottom="5dp"
+                    android:layout_below="@id/txt_leldethewan"/>
+                <TextView
+                    android:id="@+id/txt_leldetnama"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="15dp"
+                    android:textColor="#000000"
+                    android:textStyle="bold"
+                    android:textSize="20dp"
+                    android:layout_below="@+id/txtdet3"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Pelelang"/>
+                <Button
+                    android:id="@+id/btn_daftarlel"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:text="Daftar"
+                    android:layout_marginTop="50dp"
+                    android:layout_below="@id/txt_leldetnama"/>
 
-    <TextView
-        android:id="@+id/txt_leldetnama"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"/>
+            </RelativeLayout>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Harga"/>
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/tmp_idlelang"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/brownlight"/>
 
-    <TextView
-        android:id="@+id/txt_leldetharga"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+                <TextView
+                    android:id="@+id/tmp_idhewan"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_toRightOf="@id/tmp_idlelang"
+                    android:textColor="@color/brownlight"/>
 
-    <Button
-        android:id="@+id/btn_daftarlel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Daftar"
-        android:layout_marginTop="50dp" />
+                <TextView
+                    android:id="@+id/tmp_idpelelang"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_toRightOf="@id/tmp_idhewan"
+                    android:textColor="@color/brownlight"/>
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/tmp_idlelang"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="sd"
-            android:visibility="invisible"/>
+                <TextView
+                    android:id="@+id/tmp_iduser"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_toRightOf="@id/tmp_idpelelang"
+                    android:textColor="@color/brownlight"/>
+            </RelativeLayout>
+        </RelativeLayout>
 
-        <TextView
-            android:id="@+id/tmp_idhewan"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@id/tmp_idlelang"
-            android:hint="ad"/>
+    </ScrollView>
 
-        <TextView
-            android:id="@+id/tmp_idpelelang"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@id/tmp_idhewan"
-            android:hint="as"/>
 
-        <TextView
-            android:id="@+id/tmp_iduser"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@id/tmp_idpelelang"
-            android:hint="as"/>
-    </RelativeLayout>
 
 </LinearLayout>
