--- a/app/src/main/res/layout/activity_groupchat.xml
+++ b/app/src/main/res/layout/activity_groupchat.xml
@@ -5,13 +5,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.GroupchatActivity">
-    
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_messagelist"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/input_linlayout">
-    </androidx.recyclerview.widget.RecyclerView>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_messagelist"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@id/input_linlayout">
+        </androidx.recyclerview.widget.RecyclerView>
+
+    <Button
+        android:id="@+id/bid_satu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/input_linlayout"
+        android:layout_marginLeft="60dp"
+        android:text="1K"/>
+
+    <Button
+        android:id="@+id/bid_dua"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/input_linlayout"
+        android:layout_marginLeft="160dp"
+        android:text="2K"/>
+
+    <Button
+        android:id="@+id/bid_tiga"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/input_linlayout"
+        android:layout_marginLeft="260dp"
+        android:text="3K"/>
     
     <LinearLayout
         android:id="@+id/input_linlayout"
@@ -20,9 +44,10 @@
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true">
+
         <EditText
             android:id="@+id/input_edtxt"
-            android:layout_width="270dp"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:hint="write text here..."
             android:padding="17dp"/>
@@ -32,6 +57,14 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@mipmap/ic_launcher"/>
+
+        <TextView
+            android:id="@+id/timer_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="00:30"
+            android:textSize="20sp"/>
+
     </LinearLayout>
 
 </RelativeLayout>
