--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,84 +9,185 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:paddingTop="50dp">
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
-
-            <TextView
+            <RelativeLayout
+                android:id="@+id/imageRellayout"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:background="@drawable/usericonframe"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp">
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:background="@drawable/usericon"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true"/>
+            </RelativeLayout>
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:text="Username"
-                android:textSize="25sp"
-                android:layout_height="35dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="50dp"/>
-
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/imageRellayout"
+                android:layout_marginTop="60dp">
+                <TextView
+                    android:id="@+id/hometxt_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Lelang"
+                    android:textSize="30dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_margin="10dp"
+                    android:textStyle="bold"
+                    android:textColor="#000000"/>
+                <LinearLayout
+                    android:layout_width="200dp"
+                    android:layout_height="5dp"
+                    android:background="#000000"
+                    android:layout_below="@id/hometxt_1"
+                    android:layout_centerHorizontal="true"/>
+                <RelativeLayout
+                    android:id="@+id/pilihanlelang"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    android:layout_marginTop="90dp">
+                    <ImageView
+                        android:id="@+id/img_lelayam"
+                        android:layout_width="150dp"
+                        android:layout_height="250dp"
+                        android:background="@drawable/homeasset_a"/>
+                    <ImageView
+                        android:id="@+id/img_lelsapi"
+                        android:layout_width="150dp"
+                        android:layout_height="250dp"
+                        android:background="@drawable/homeasset_b"
+                        android:layout_alignParentRight="true"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Lelang Ayam"
+                        android:textColor="#000000"
+                        android:textStyle="bold"
+                        android:textSize="20sp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="10dp"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Lelang Sapi"
+                        android:textColor="@color/white"
+                        android:textStyle="bold"
+                        android:textSize="20sp"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="30dp"
+                        android:layout_marginTop="10dp"/>
+                    <ImageView
+                        android:layout_width="70dp"
+                        android:layout_height="100dp"
+                        android:background="@drawable/iconayam"
+                        android:layout_marginTop="140dp"/>
+                    <ImageView
+                        android:layout_width="70dp"
+                        android:layout_height="100dp"
+                        android:background="@drawable/iconsapi"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginTop="140dp"/>
+                </RelativeLayout>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/homeasset_c"
+                    android:layout_below="@+id/pilihanlelang"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="30dp"
+                    android:padding="10dp">
+                    <Button
+                        android:id="@+id/btn_towallet"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Wallet"/>
+                    <Button
+                        android:id="@+id/btn_tolistlelang"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_below="@id/btn_towallet"
+                        android:text="List Lelang"/>
+                    <Button
+                        android:id="@+id/btn_togroupcht"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_below="@id/btn_tolistlelang"
+                        android:text="Group Chat"/>
+                    <Button
+                        android:id="@+id/btn_toaddlelang"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/btn_togroupcht"
+                        android:layout_marginTop="10dp"
+                        android:text="Add New Lelang"/>
+                    <Button
+                        android:id="@+id/btn_toreqlel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_below="@id/btn_toaddlelang"
+                        android:text="Requset Lelang"/>
+                </RelativeLayout>
+            </RelativeLayout>
             <TextView
                 android:id="@+id/txt_username"
-                android:background="@color/colorAccent"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_margin="20dp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:text="Email"
-                android:textSize="25sp"
-                android:layout_height="35dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="50dp"/>
-
+                android:layout_height="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:text="Username"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:textColor="#000000"
+                android:layout_toRightOf="@id/imageRellayout"/>
             <TextView
                 android:id="@+id/txt_useremail"
-                android:background="@color/colorAccent"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_margin="20dp"/>
-
-            <Button
+                android:layout_height="20dp"
+                android:layout_marginLeft="10dp"
+                android:text="username@gmail.com"
+                android:textColor="#000000"
+                android:layout_below="@id/txt_username"
+                android:layout_toRightOf="@id/imageRellayout"/>
+            <ImageView
+                android:id="@+id/smallwalleticon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/smallwalleticon"
+                android:layout_toRightOf="@id/imageRellayout"
+                android:layout_below="@id/txt_useremail"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"/>
+            <TextView
+                android:id="@+id/txt_homesaldo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/smallwalleticon"
+                android:layout_below="@id/txt_useremail"
+                android:text="5000.000"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                android:textColor="#000000"
+                android:layout_marginLeft="10dp"/>
+            <ImageView
                 android:id="@+id/btn_logout"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Logout"/>
-
-            <Button
-                android:id="@+id/btn_towallet"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Wallet"/>
-
-            <Button
-                android:id="@+id/btn_toaddlelang"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Add New Lelang"/>
-
-            <Button
-                android:id="@+id/btn_tolistlelang"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="List Lelang"/>
-
-            <Button
-                android:id="@+id/btn_toreqlel"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Requset Lelang"/>
-
-            <Button
-                android:id="@+id/btn_togroupcht"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Group Chat"/>
-
-        </LinearLayout>
+                android:layout_marginTop="10dp"
+                android:background="@drawable/logout"
+                android:layout_alignParentRight="true"/>
+        </RelativeLayout>
     </ScrollView>
-
-
-
-
 </LinearLayout>
