--- a/app/src/main/res/layout/activity_lelreqlist.xml
+++ b/app/src/main/res/layout/activity_lelreqlist.xml
@@ -10,7 +10,7 @@
     <TextView
         android:id="@+id/reqlel_filterkey"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="10dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/reqlelRV"
