--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,33 +5,53 @@
     android:layout_height="match_parent"
     tools:context=".activity.MainActivity">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:background="@mipmap/ic_launcher" />
-
-    <LinearLayout
+    <RelativeLayout
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:orientation="horizontal">
+        android:layout_height="550dp"
+        android:background="@color/brown">
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/auction"
+            android:background="@drawable/logoasset_a">
+        </ImageView>
 
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_baseline_arrow_left_24"
+            android:layout_marginTop="500dp">
+        </ImageView>
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="300dp"
+            android:layout_marginTop="450dp"
+            android:src="@drawable/ic_baseline_arrow_right_24">
+        </ImageView>
         <Button
             android:id="@+id/buttonSignIn"
-            android:layout_width="match_parent"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="500dp"
+            android:background="@color/brown"
             android:layout_weight="1"
-            android:text="Sign In" />
+            android:text="Sign In"
+            android:textColor="@color/white"/>
 
         <Button
             android:id="@+id/buttonSignUp"
-            android:layout_width="match_parent"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Sign Up" />
-    </LinearLayout>
+            android:layout_marginLeft="200dp"
+            android:layout_marginTop="450dp"
+            android:background="@color/brown"
+            android:text="Sign Up"
+            android:textColor="@color/white"/>
+    </RelativeLayout>
 
 </RelativeLayout>
