--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -4,33 +4,90 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/white"
     tools:context=".activity.auth.SigninActivity">
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/rl_one"
         android:layout_width="match_parent"
+        android:layout_height="99dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="25dp"
+        android:background="@drawable/signasset_a">
+        <TextView
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="20dp"
+            android:text="Ingat selalu email dan password anda ya..."
+            android:textSize="20sp"
+            android:textColor="@color/white"/>
+        <Button
+            android:id="@+id/signup"
+            android:layout_marginTop="20dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="280dp"
+            android:background="@drawable/ic_round_arrow_forwardwhite_ios_24"
+            android:textStyle="bold"/>
+    </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/rl_two"
+        android:layout_width="30dp"
+        android:layout_height="450dp"
+        android:background="@drawable/signasset_b"
+        android:layout_below="@+id/rl_one"
+        android:layout_alignParentRight="true"/>
+    <RelativeLayout
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/signasset_c"
+        android:layout_marginTop="105dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="20dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:textSize="20dp"
+            android:text="SIGN IN PAGE"
+            android:textStyle="bold"
+            android:gravity="center_horizontal" />
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:orientation="vertical">
+        android:layout_marginTop="300dp"
+        android:orientation="vertical"
+        android:layout_marginLeft="50dp">
 
         <EditText
             android:id="@+id/editTextEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter email "
-            android:inputType="textEmailAddress" />
+            android:inputType="textEmailAddress"/>
 
         <EditText
             android:id="@+id/editTextPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter password "
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:layout_marginTop="20dp"/>
 
         <Button
             android:id="@+id/btn_signin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Sign In" />
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="25dp"
+            android:background="@drawable/signasset_d"
+            android:text="Sign In"
+            android:textColor="@color/white"
+            android:layout_marginTop="50dp"/>
 
     </LinearLayout>
 
