--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -2,14 +2,62 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <RelativeLayout
+        android:id="@+id/rl_one"
+        android:layout_width="match_parent"
+        android:layout_height="99dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="25dp"
+        android:background="@drawable/signupasset_a">
+        <TextView
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginTop="20dp"
+            android:text="Buatlah password yang mudah anda ingat..."
+            android:textSize="20sp"
+            android:textColor="@color/white"/>
+        <Button
+            android:id="@+id/signup"
+            android:layout_marginTop="20dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/ic_baseline_arrow_back_ios_24"
+            android:textStyle="bold"/>
+    </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/rl_two"
+        android:layout_width="30dp"
+        android:layout_height="450dp"
+        android:background="@drawable/signupasset_b"
+        android:layout_below="@+id/rl_one"/>
+    <RelativeLayout
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/signasset_c"
+        android:layout_marginTop="105dp"
+        android:layout_marginLeft="20dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:textSize="20dp"
+            android:text="SIGNUP PAGE"
+            android:textStyle="bold"
+            android:gravity="center_horizontal" />
+    </RelativeLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:orientation="vertical">
-
+        android:layout_marginTop="300dp"
+        android:orientation="vertical"
+        android:layout_marginLeft="50dp">
         <EditText
             android:id="@+id/editTextName"
             android:layout_width="match_parent"
@@ -33,9 +81,13 @@
 
         <Button
             android:id="@+id/btn_signup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Sign up" />
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:background="@drawable/signasset_d"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="20dp"
+            android:text="Sign up"
+            android:textColor="@color/white"/>
 
     </LinearLayout>
 
