--- a/app/src/main/res/layout/activity_wallet_create.xml
+++ b/app/src/main/res/layout/activity_wallet_create.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".activity.WalletCreateActivity">
 
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:background="@drawable/createwallet"
+        android:layout_marginTop="120dp"
+        android:layout_marginLeft="30dp"/>
+
+
     <TextView
         android:id="@+id/text2"
         android:layout_width="wrap_content"
@@ -38,18 +47,25 @@
 
     <TextView
         android:id="@+id/text1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
+        android:layout_width="190dp"
+        android:layout_height="50dp"
+        android:textAlignment="center"
+        android:layout_marginTop="335dp"
         android:layout_centerHorizontal="true"
-        android:text="Buat wallet untuk mempermudah transaksi"/>
+        android:text="Buatlah wallet agar anda dapat ikut serta dalam sebuah lelang"
+        android:gravity="center_horizontal"
+        android:textColor="@color/greenmoney"/>
 
     <Button
         android:id="@+id/btn_createwallet"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
         android:text="Buat Wallet"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="40dp"/>
+        android:layout_below="@+id/image"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginBottom="100dp"
+        android:backgroundTint="@color/brown"
+        android:textColor="@color/white"/>
 
 </RelativeLayout>
